frontend/test/should_fail/defYield_006.grg
using defYield;

rule t
{
	pp:p();
	modify {
		y:B;
		pp(--- yield x, yield y);
	---
		def x:B;
	}
}

pattern p modify (x:B --- def z:B)
{
	modify {
	---
		eval { yield z = x; }
	}
}

